--- a/src/locales/bn/translation.json
+++ b/src/locales/bn/translation.json
@@ -1,11 +1,126 @@
 {
-  "greeting": "Namaste,",
-  "get_started": "Let's get started.",
-  "login_description": "Login using your number to continue.",
-  "phone_number_placeholder": "Enter your phone number",
-  "invalid_phone_number": "Please enter a valid 10-digit phone number.",
-  "login_button": "Login",
-  "error": "Error",
-  "error_message": "Failed to save your number. Please try again.",
-  "invalid_phone_number_title": "Invalid Phone Number"
+  "greeting": "নমস্তে,",
+  "get_started": "চলুন শুরু করি।",
+  "login_description": "চালিয়ে যেতে আপনার নম্বর ব্যবহার করে লগইন করুন।",
+  "phone_number_placeholder": "আপনার ফোন নম্বর লিখুন",
+  "invalid_phone_number": "দয়া করে একটি বৈধ ১০-সংখ্যার ফোন নম্বর লিখুন।",
+  "login_button": "লগইন",
+  "error": "ত্রুটি",
+  "error_message": "আপনার নম্বর সংরক্ষণ করতে ব্যর্থ হয়েছে। অনুগ্রহ করে আবার চেষ্টা করুন।",
+  "invalid_phone_number_title": "অবৈধ ফোন নম্বর",
+  "verify_otp": "ওটিপি যাচাই করুন",
+  "enter_otp_code": "আপনার ফোনে পাঠানো ৪-সংখ্যার কোড লিখুন।",
+  "resend_otp": "ওটিপি পুনরায় পাঠান",
+  "confirm": "নিশ্চিত করুন",
+  "your_business_name": "আপনার ব্যবসার নাম",
+  "transaction_details": "লেনদেনের বিবরণ",
+  "party_details": "পার্টির বিবরণ",
+  "manage_transaction_details": "আপনার লেনদেনের বিবরণ দক্ষতার সাথে পরিচালনা করুন।",
+  "manage_party_details": "এখানে আপনি পার্টির বিবরণ দেখতে এবং পরিচালনা করতে পারবেন।",
+  "settings": "সেটিংস",
+  "accountInformation": "অ্যাকাউন্ট তথ্য",
+  "publicProfile": "পাবলিক প্রোফাইল",
+  "notifications": "নোটিফিকেশন",
+  "privacy_policy": "গোপনীয়তা নীতি",
+  "notifications_reset": "নোটিফিকেশন রিসেট",
+  "privacyAndDate": "গোপনীয়তা এবং তারিখ",
+  "securityAndLogins": "নিরাপত্তা এবং লগইন",
+  "actions": "কার্যকলাপ",
+  "addAccount": "অ্যাকাউন্ট যোগ করুন",
+  "logOut": "লগআউট",
+  "theme_change": "থিম পরিবর্তন",
+  "language_change": "ভাষা পরিবর্তন",
+  "back": "পিছনে",
+  "account_information": "অ্যাকাউন্ট তথ্য",
+  "reset_notifications_label": "নোটিফিকেশন রিসেট করুন",
+  "terms_and_conditions": "শর্তাবলী",
+  "term_and_condition": "শর্ত এবং নীতি",
+  "logout": "লগআউট",
+  "logout_confirmation": "আপনি কি নিশ্চিত যে আপনি লগআউট করতে চান?",
+  "logout_message": "লগআউট করতে নিশ্চিত চাপুন",
+  "light": "হালকা মোড চালু করুন",
+  "dark": "ডার্ক মোড চালু করুন",
+  "web": "ওয়েব",
+  "notification_clean": "নোটিফিকেশন পরিষ্কার করুন",
+  "cancel": "বাতিল",
+  "create_account": "অ্যাকাউন্ট তৈরি করুন",
+  "signup_description": "আপনার ইমেইল ঠিকানা দিয়ে সাইন আপ করুন।",
+  "email_placeholder": "আপনার ইমেইল ঠিকানা লিখুন",
+  "password_placeholder": "আপনার পাসওয়ার্ড লিখুন",
+  "register_button": "সাইন আপ",
+  "forgot_password": "পাসওয়ার্ড ভুলে গেছেন",
+  "forgot_password_description": "আপনার পাসওয়ার্ড রিসেট করতে ইমেইল ঠিকানা লিখুন।",
+  "address": "ঠিকানা",
+  "phoneNumber": "ফোন নম্বর",
+  "password": "পাসওয়ার্ড",
+  "email": "ইমেইল",
+  "name": "নাম",
+  "register_success": "নিবন্ধন সফল হয়েছে",
+  "have_account": "আগেই অ্যাকাউন্ট আছে? লগইন করুন",
+  "registration_failed": "নিবন্ধন ব্যর্থ হয়েছে। অনুগ্রহ করে আবার চেষ্টা করুন।",
+  "register_failed": "নিবন্ধন ব্যর্থ হয়েছে। অনুগ্রহ করে আবার চেষ্টা করুন।",
+  "confirm_password_placeholder": "আপনার নিশ্চিত পাসওয়ার্ড লিখুন",
+  "password_required_length": "পাসওয়ার্ড কমপক্ষে ৬ অক্ষরের হতে হবে",
+  "password_mismatch": "পাসওয়ার্ড মিলতে হবে",
+  "login_success": "লগইন সফল হয়েছে",
+  "customer": "গ্রাহক",
+  "supplier": "সরবরাহকারী",
+  "dark_mode": "ডার্ক মোড চালু করুন",
+  "light_mode": "হালকা মোড চালু করুন",
+  "reset_password": "পাসওয়ার্ড পুনরুদ্ধার করুন",
+  "reset_description": "আপনার পাসওয়ার্ড রিসেট করতে ইমেইল লিখুন।",
+  "send_reset_link": "রিসেট লিংক পাঠান",
+  "email_required": "দয়া করে আপনার ইমেইল লিখুন।",
+  "reset_email_sent": "পাসওয়ার্ড রিসেট ইমেইল সফলভাবে পাঠানো হয়েছে!",
+  "reset_failed": "পাসওয়ার্ড রিসেট ইমেইল পাঠাতে ব্যর্থ হয়েছে।",
+  "go_back": "ফিরে যান",
+  "forget_password": "পাসওয়ার্ড ভুলে গেছেন?",
+  "change_password": "পাসওয়ার্ড পরিবর্তন করুন",
+  "current_password_placeholder": "বর্তমান পাসওয়ার্ড লিখুন",
+  "new_password_placeholder": "নতুন পাসওয়ার্ড লিখুন",
+  "password_updated": "পাসওয়ার্ড সফলভাবে আপডেট হয়েছে!",
+  "send": "পাঠান",
+  "receive": "প্রাপ্ত করুন",
+  "add_customer": "গ্রাহক যোগ করুন",
+  "add_supplier": "সরবরাহকারী যোগ করুন",
+  "call": "কল করুন",
+  "message": "বার্তা",
+  "accessibility": "অ্যাক্সেসিবিলিটি",
+  "language": "ভাষা",
+  "increase_text_size": "লেখার আকার বড় করুন",
+  "increase_text_size_A": "লেখার আকার বড় করুন",
+  "currentTextSize": "লেখার আকার",
+  "use_device_language": "ডিভাইসের ভাষা ব্যবহার করুন",
+  "auto_dark_mode": "স্বয়ংক্রিয় ডার্ক মোড",
+  "follow_os_setting": "ওএস সেটিং অনুসরণ করুন",
+  "about": "সম্পর্কিত",
+  "terms_conditions": "শর্তাবলী",
+  "mode": "স্বয়ংক্রিয় ডার্ক মোড",
+  "off": "বন্ধ",
+  "follow_on_setting": "ওএস সেটিং অনুসরণ করুন",
+  "auto_dark_mode_on": "স্বয়ংক্রিয় ডার্ক মোড চালু",
+  "overrideSettingsTitle": "ডিভাইস সেটিংস ওভাররাইড করুন",
+  "overrideSettingsSubtitle": "অ্যাপে পাঠ্যের আকার সামঞ্জস্য করুন যা ডিভাইসের বাকি অংশকে প্রভাবিত করবে না",
+  "textLabel": "A",
+  "increaseText": "বড় করুন",
+  "decreaseText": "ছোট করুন",
+  "text_size_not_default": "সিস্টেম ডিফল্ট টেক্সট সাইজ চালু",
+  "please_fill_all_fields": "অনুগ্রহ করে সব ঘর পূরণ করুন",
+  "customer_updated_successfully": "গ্রাহকের তথ্য সফলভাবে আপডেট হয়েছে",
+  "customer_added_successfully": "গ্রাহক সফলভাবে যোগ হয়েছে",
+  "something_went_wrong": "কিছু ভুল হয়েছে",
+  "edit_customer": "গ্রাহক সম্পাদনা করুন",
+  "enter_customer_name": "গ্রাহকের নাম লিখুন",
+  "enter_customer_email": "গ্রাহকের ইমেইল লিখুন",
+  "enter_customer_phone": "গ্রাহকের ফোন নম্বর লিখুন",
+  "enter_customer_address": "গ্রাহকের ঠিকানা লিখুন",
+  "loading": "লোড হচ্ছে...",
+  "update_customer": "গ্রাহক আপডেট করুন",
+  "transaction_history": "লেনদেনের ইতিহাস",
+  "add_transaction": "লেনদেন যোগ করুন",
+  "delete": "মুছুন",
+  "transactions": "লেনদেন",
+  "confirm_delete": "আপনি কি নিশ্চিত যে এই লেনদেনটি মুছতে চান?",
+  "total_settlement": "মোট নিষ্পত্তি",
+  "no_data": "কোনো তথ্য নেই"
 }
