--- a/src/locales/gu/translation.json
+++ b/src/locales/gu/translation.json
@@ -1,73 +1,80 @@
 {
   "greeting": "નમસ્તે,",
-  "get_started": "ચાલો શરુ કરીએ.",
+  "get_started": "ચાલો શરૂ કરીએ.",
   "login_description": "જારી રાખવા માટે તમારો નંબર ઉપયોગ કરીને લૉગિન કરો.",
   "phone_number_placeholder": "તમારો ફોન નંબર દાખલ કરો",
-  "invalid_phone_number": "કૃપા કરીને માન્ય 10 અંકનો ફોન નંબર દાખલ કરો.",
+  "invalid_phone_number": "કૃપા કરીને માન્ય 10-અંકનો ફોન નંબર દાખલ કરો.",
   "login_button": "લૉગિન",
   "error": "ભૂલ",
-  "error_message": "તમારો નંબર સાચવવામાં નિષ્ફળ. ફરી પ્રયત્ન કરો.",
+  "error_message": "તમારો નંબર સંગ્રહ કરવામાં નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
   "invalid_phone_number_title": "અમાન્ય ફોન નંબર",
   "verify_otp": "OTP ચકાસો",
-  "enter_otp_code": "તમારા ફોન પર મોકલેલ 4-અંકનો કોડ દાખલ કરો.",
+  "enter_otp_code": "તમારા ફોન પર મોકલાયેલ 4-અંકનો કોડ દાખલ કરો.",
   "resend_otp": "OTP ફરી મોકલો",
   "confirm": "પુષ્ટિ કરો",
-  "your_business_name": "તમારું વ્યવસાય નામ",
-  "transaction_details": "લેન-દેન વિગતો",
+  "your_business_name": "તમારા વ્યવસાયનું નામ",
+  "transaction_details": "વ્યવહાર વિગતો",
   "party_details": "પાર્ટી વિગતો",
-  "manage_transaction_details": "તમારી લેવડ-દેવડની વિગતો અસરકારક રીતે મેનેજ કરો.",
-  "manage_party_details": "અહીં તમે તમારી પાર્ટી વિગતો જોઈ અને મેનેજ કરી શકો.",
+  "manage_transaction_details": "તમારા વ્યવહારોની વિગતો અસરકારક રીતે મેનેજ કરો.",
+  "manage_party_details": "અહીં તમે તમારી પાર્ટી વિગતો જોઈ અને મેનેજ કરી શકો છો.",
   "settings": "સેટિંગ્સ",
-  "accountInformation": "ખાતાની માહિતી",
+  "accountInformation": "એકાઉન્ટ માહિતી",
   "publicProfile": "જાહેર પ્રોફાઇલ",
   "notifications": "સૂચનાઓ",
   "privacy_policy": "ગોપનીયતા નીતિ",
-  "notifications_reset": "સૂચનાઓ પુનઃસેટ",
+  "notifications_reset": "સૂચનાઓ ફરી સેટ કરો",
   "privacyAndDate": "ગોપનીયતા અને તારીખ",
   "securityAndLogins": "સુરક્ષા અને લૉગિન",
   "actions": "ક્રિયાઓ",
-  "addAccount": "ખાતું ઉમેરો",
+  "addAccount": "એકાઉન્ટ ઉમેરો",
   "logOut": "લૉગ આઉટ",
-  "theme_change": "થીમ બદલો",
-  "language_change": "ભાષા બદલો",
-  "back": "પાછા",
-  "account_information": "ખાતાની માહિતી",
-  "reset_notifications_label": "સૂચનાઓ પુનઃસેટ કરો",
+  "theme_change": "થીમ બદલાવો",
+  "language_change": "ભાષા બદલાવો",
+  "back": "પાછળ",
+  "account_information": "એકાઉન્ટ માહિતી",
+  "reset_notifications_label": "સૂચનાઓ ફરી સેટ કરો",
   "terms_and_conditions": "શરતો અને નિયમો",
   "term_and_condition": "શરત અને નિયમ",
   "logout": "લૉગઆઉટ",
   "logout_confirmation": "શું તમે ખરેખર લૉગઆઉટ કરવા માંગો છો?",
-  "logout_message": "લૉગઆઉટ કરવા માટે પુષ્ટિ દબાવો",
-  "light": "લાઇટ મોડમાં બદલો",
-  "dark": "ડાર્ક મોડમાં બદલો",
+  "logout_message": "લૉગઆઉટ માટે પુષ્ટિ દબાવો",
+  "light": "લાઇટ મોડમાં બદલાવો",
+  "dark": "ડાર્ક મોડમાં બદલાવો",
   "web": "વેબ",
   "notification_clean": "સૂચનાઓ સાફ કરો",
   "cancel": "રદ કરો",
-  "create_account": "ખાતું બનાવો",
-  "signup_description": "તમારા ઈમેઈલ સરનામા સાથે સાઇન અપ કરો.",
-  "email_placeholder": "તમારું ઈમેઈલ દાખલ કરો",
+  "create_account": "એકાઉન્ટ બનાવો",
+  "signup_description": "તમારા ઈમેલ સરનામા સાથે સાઇન અપ કરો.",
+  "email_placeholder": "તમારું ઈમેલ સરનામું દાખલ કરો",
   "password_placeholder": "તમારો પાસવર્ડ દાખલ કરો",
   "register_button": "સાઇન અપ",
-  "register_success": "સફળ નોંધણી",
-  "have_account": "પહેલેથી એકાઉન્ટ છે? લૉગિન કરો",
-  "registration_failed": "નોંધણી નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
-  "register_failed": "નોંધણી નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
+  "forgot_password": "પાસવર્ડ ભૂલાઈ ગયો?",
+  "forgot_password_description": "તમારો પાસવર્ડ રીસેટ કરવા માટે તમારું ઈમેલ સરનામું દાખલ કરો.",
+  "address": "સરનામું",
+  "phoneNumber": "ફોન નંબર",
+  "password": "પાસવર્ડ",
+  "email": "ઈમેલ",
+  "name": "નામ",
+  "register_success": "રજીસ્ટ્રેશન સફળ",
+  "have_account": "પહેલેથી જ એકાઉન્ટ છે? લૉગિન કરો",
+  "registration_failed": "રજીસ્ટ્રેશન નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
+  "register_failed": "રજીસ્ટ્રેશન નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
   "confirm_password_placeholder": "તમારો પાસવર્ડ પુષ્ટિ કરો",
-  "password_required_length": "પાસવર્ડ ઓછામાં ઓછા 6 અક્ષરનો હોવો જોઈએ",
-  "password_mismatch": "પાસવર્ડ મૅચ થવો જોઈએ",
+  "password_required_length": "પાસવર્ડ ઓછામાં ઓછો 6 અક્ષરનો હોવો જોઈએ",
+  "password_mismatch": "પાસવર્ડ મેળ ખાવો જોઈએ",
   "login_success": "લૉગિન સફળ",
   "customer": "ગ્રાહક",
   "supplier": "સપ્લાયર",
   "dark_mode": "ડાર્ક મોડ ચાલુ કરો",
   "light_mode": "લાઇટ મોડ ચાલુ કરો",
-  "reset_password": "પાસવર્ડ ફરી સેટ કરો",
-  "reset_description": "તમારો પાસવર્ડ ફરી સેટ કરવા તમારું ઈમેઈલ દાખલ કરો.",
-  "send_reset_link": "રીસેટ લિંક મોકલો",
-  "email_required": "કૃપા કરીને તમારું ઈમેઈલ દાખલ કરો.",
-  "reset_email_sent": "પાસવર્ડ રીસેટ ઈમેઈલ સફળતાપૂર્વક મોકલવામાં આવ્યો!",
-  "reset_failed": "પાસવર્ડ રીસેટ ઈમેઈલ મોકલવામાં નિષ્ફળ.",
+  "reset_password": "પાસવર્ડ રીસેટ કરો",
+  "reset_description": "તમારું પાસવર્ડ રીસેટ કરવા માટે તમારું ઈમેલ દાખલ કરો.",
+  "send_reset_link": "પાસવર્ડ રીસેટ લિંક મોકલો",
+  "email_required": "કૃપા કરીને તમારું ઈમેલ દાખલ કરો.",
+  "reset_email_sent": "પાસવર્ડ રીસેટ ઈમેલ સફળતાપૂર્વક મોકલાયો!",
+  "reset_failed": "પાસવર્ડ રીસેટ ઈમેલ મોકલવામાં નિષ્ફળ.",
   "go_back": "પાછા જાઓ",
-  "forget_password": "પાસવર્ડ ભૂલાયા?",
+  "forget_password": "પાસવર્ડ ભૂલાઈ ગયો?",
   "change_password": "પાસવર્ડ બદલો",
   "current_password_placeholder": "તમારો વર્તમાન પાસવર્ડ દાખલ કરો",
   "new_password_placeholder": "તમારો નવો પાસવર્ડ દાખલ કરો",
@@ -78,56 +85,39 @@
   "add_supplier": "સપ્લાયર ઉમેરો",
   "call": "કૉલ",
   "message": "સંદેશ",
-  "accessibility": "સુલભતા",
+  "accessibility": "ઍક્સેસિબિલિટી",
   "language": "ભાષા",
-  "increase_text_size": "લખાણનું માપ વધારવું",
-  "increase_text_size_A": "લખાણનું માપ વધારવું",
-  "currentTextSize": "લખાણ માપ",
-  "use_device_language": "ડિવાઇસની ભાષા ઉપયોગ કરો",
-  "auto_dark_mode": "આપમેળે ડાર્ક મોડ",
+  "increase_text_size": "ટેક્સ્ટ સાઇઝ વધારો",
+  "increase_text_size_A": "ટેક્સ્ટ સાઇઝ વધારો",
+  "currentTextSize": "ટેક્સ્ટ સાઇઝ",
+  "use_device_language": "ઉપકરણની ભાષાનો ઉપયોગ કરો",
+  "auto_dark_mode": "ઓટો ડાર્ક મોડ",
   "follow_os_setting": "OS સેટિંગ અનુસરો",
-  "about": "વિશેષ",
+  "about": "વિશે",
   "terms_conditions": "શરતો અને નિયમો",
-  "mode": "આપમેળે ડાર્ક મોડ",
+  "mode": "ઓટો ડાર્ક મોડ",
   "off": "બંધ",
   "follow_on_setting": "OS સેટિંગ અનુસરો",
-  "auto_dark_mode_on": "આપમેળે ડાર્ક મોડ ચાલુ",
+  "auto_dark_mode_on": "ઓટો ડાર્ક મોડ ચાલુ",
   "overrideSettingsTitle": "ઉપકરણ સેટિંગ્સ ઓવરરાઇડ કરો",
-  "overrideSettingsSubtitle": "એપમાં લખાણનું માપ ગોઠવો બાકી ઉપકરણને અસર કર્યા વગર",
+  "overrideSettingsSubtitle": "ઍપમાં ટેક્સ્ટ સાઇઝ સમાયોજિત કરો",
   "textLabel": "A",
   "increaseText": "વધારો",
-  "decreaseText": "ઓછું કરો",
-  "text_size_not_default": "સિસ્ટમ ડિફૉલ્ટ લખાણ માપ ચાલુ છે",
-  "please_fill_all_fields": "કૃપા કરીને બધી વિગતો ભરો",
+  "decreaseText": "ઘટાડો",
+  "text_size_not_default": "સિસ્ટમ ડિફૉલ્ટ ટેક્સ્ટ સાઇઝ ચાલુ છે",
+  "please_fill_all_fields": "કૃપા કરીને તમામ ક્ષેત્રો ભરો",
   "customer_updated_successfully": "ગ્રાહક સફળતાપૂર્વક અપડેટ થયો",
   "customer_added_successfully": "ગ્રાહક સફળતાપૂર્વક ઉમેરાયો",
   "something_went_wrong": "કંઈક ખોટું થયું",
   "edit_customer": "ગ્રાહક સંપાદિત કરો",
   "enter_customer_name": "ગ્રાહકનું નામ દાખલ કરો",
-  "enter_customer_email": "ગ્રાહકનો ઈમેઈલ દાખલ કરો",
+  "enter_customer_email": "ગ્રાહકનો ઈમેલ દાખલ કરો",
   "enter_customer_phone": "ગ્રાહકનો ફોન નંબર દાખલ કરો",
-  "enter_customer_address": "ગ્રાહકનો સરનામું દાખલ કરો",
+  "enter_customer_address": "ગ્રાહકનું સરનામું દાખલ કરો",
   "loading": "લોડ થઈ રહ્યું છે...",
   "update_customer": "ગ્રાહક અપડેટ કરો",
-  "transcation_screen": "લેન-દેન",
-  "transcation_list": "લેન-દેન યાદી",
-  "change_transcation_detail": "લેન-દેન વિગતો બદલો",
-  "change_customer_detail": "ગ્રાહક વિગતો બદલો",
-  "business": "વ્યવસાય",
-  "edit_profile": "પ્રોફાઇલ સંપાદિત કરો",
-  "enter_amount": "રકમ દાખલ કરો",
-  "edit": "સંપાદિત કરો",
-  "save": "સાચવો",
-  "you_gave": "તમે આપ્યું",
-  "you_got": "તમે મેળવ્યું",
-  "settement": "સેટલમેન્ટ રકમ",
-  "report": "રિપોર્ટ",
-  "sms": "SMS",
-  "amt": "રકમ",
-  "bal": "બેલેન્સ",
-  "customer_name": "ગ્રાહકનું નામ",
-  "customer_email": "ગ્રાહક ઈમેઈલ (વૈકલ્પિક)",
-  "customer_phone": "ગ્રાહક ફોન",
-  "customer_address": "ગ્રાહક સરનામું (વૈકલ્પિક)",
-  "please_fill_name_phone": "કૃપા કરીને નામ અને ફોન નંબર ભરો"
+  "delete": "કાઢી નાંખો",
+  "confirm_delete": "શું તમે ખરેખર આ વ્યવહાર કાઢી નાખવા માંગો છો?",
+  "show_address": "સરનામું બતાવો",
+  "close": "બંધ કરો"
 }
