--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -1,11 +1,137 @@
 {
-  "greeting": "Namaste,",
-  "get_started": "Let's get started.",
-  "login_description": "Login using your number to continue.",
-  "phone_number_placeholder": "Enter your phone number",
-  "invalid_phone_number": "Please enter a valid 10-digit phone number.",
-  "login_button": "Login",
-  "error": "Error",
-  "error_message": "Failed to save your number. Please try again.",
-  "invalid_phone_number_title": "Invalid Phone Number"
+  "greeting": "नमस्ते,",
+  "get_started": "शुरू करें।",
+  "login_description": "जारी रखने के लिए अपने नंबर से लॉगिन करें।",
+  "phone_number_placeholder": "अपना फोन नंबर दर्ज करें",
+  "invalid_phone_number": "कृपया 10 अंकों का वैध फोन नंबर दर्ज करें।",
+  "login_button": "लॉगिन",
+  "error": "त्रुटि",
+  "error_message": "आपका नंबर सहेजने में विफल रहा। कृपया पुनः प्रयास करें।",
+  "invalid_phone_number_title": "अमान्य फोन नंबर",
+  "verify_otp": "ओटीपी सत्यापित करें",
+  "enter_otp_code": "अपने फोन पर भेजा गया 4-अंकों का कोड दर्ज करें।",
+  "resend_otp": "ओटीपी पुनः भेजें",
+  "confirm": "पुष्टि करें",
+  "your_business_name": "आपका व्यापार नाम",
+  "transaction_details": "लेन-देन विवरण",
+  "party_details": "पार्टी विवरण",
+  "manage_transaction_details": "अपने लेन-देन विवरण को कुशलतापूर्वक प्रबंधित करें।",
+  "manage_party_details": "यहाँ आप अपनी पार्टी का विवरण देख और प्रबंधित कर सकते हैं।",
+  "settings": "सेटिंग्स",
+  "accountInformation": "खाता जानकारी",
+  "publicProfile": "सार्वजनिक प्रोफ़ाइल",
+  "notifications": "सूचनाएं",
+  "privacy_policy": "गोपनीयता नीति",
+  "notifications_reset": "सूचनाएं रीसेट करें",
+  "privacyAndDate": "गोपनीयता और दिनांक",
+  "securityAndLogins": "सुरक्षा और लॉगिन",
+  "actions": "क्रियाएँ",
+  "addAccount": "खाता जोड़ें",
+  "logOut": "लॉगआउट",
+  "theme_change": "थीम बदलें",
+  "language_change": "भाषा बदलें",
+  "back": "वापस",
+  "account_information": "खाता जानकारी",
+  "reset_notifications_label": "सूचनाएं रीसेट करें",
+  "terms_and_conditions": "नियम और शर्तें",
+  "term_and_condition": "नियम और शर्त",
+  "logout": "लॉगआउट",
+  "logout_confirmation": "क्या आप वाकई लॉगआउट करना चाहते हैं?",
+  "logout_message": "लॉगआउट करने के लिए पुष्टि करें दबाएं",
+  "light": "लाइट मोड में बदलें",
+  "dark": "डार्क मोड में बदलें",
+  "web": "वेब",
+  "notification_clean": "सूचनाएं साफ करें",
+  "cancel": "रद्द करें",
+  "create_account": "खाता बनाएँ",
+  "signup_description": "अपने ईमेल पते के साथ साइन अप करें।",
+  "email_placeholder": "अपना ईमेल पता दर्ज करें",
+  "password_placeholder": "अपना पासवर्ड दर्ज करें",
+  "register_button": "साइन अप करें",
+  "forgot_password": "पासवर्ड भूल गए",
+  "forgot_password_description": "पासवर्ड रीसेट करने के लिए अपना ईमेल पता दर्ज करें।",
+  "address": "पता",
+  "phoneNumber": "फोन नंबर",
+  "password": "पासवर्ड",
+  "email": "ईमेल दर्ज करें",
+  "name": "नाम",
+  "register_success": "सफलतापूर्वक पंजीकरण हुआ",
+  "have_account": "पहले से खाता है? लॉगिन करें",
+  "registration_failed": "पंजीकरण विफल रहा। कृपया पुनः प्रयास करें।",
+  "register_failed": "पंजीकरण विफल रहा। कृपया पुनः प्रयास करें।",
+  "confirm_password_placeholder": "अपना पासवर्ड पुष्टि करें",
+  "password_required_length": "पासवर्ड कम से कम 6 अक्षरों का होना चाहिए",
+  "password_mismatch": "पासवर्ड मेल खाना चाहिए",
+  "login_success": "सफलतापूर्वक लॉगिन हुआ",
+  "customer": "ग्राहक",
+  "supplier": "आपूर्तिकर्ता",
+  "dark_mode": "डार्क मोड चालू करें",
+  "light_mode": "लाइट मोड चालू करें",
+  "reset_password": "पासवर्ड रीसेट करें",
+  "reset_description": "पासवर्ड रीसेट करने के लिए अपना ईमेल दर्ज करें।",
+  "send_reset_link": "रीसेट लिंक भेजें",
+  "email_required": "कृपया अपना ईमेल दर्ज करें।",
+  "reset_email_sent": "पासवर्ड रीसेट ईमेल सफलतापूर्वक भेजा गया!",
+  "reset_failed": "पासवर्ड रीसेट ईमेल भेजने में विफल।",
+  "go_back": "वापस जाएं",
+  "forget_password": "पासवर्ड भूल गए?",
+  "change_password": "पासवर्ड बदलें",
+  "current_password_placeholder": "अपना वर्तमान पासवर्ड दर्ज करें",
+  "new_password_placeholder": "अपना नया पासवर्ड दर्ज करें",
+  "password_updated": "पासवर्ड सफलतापूर्वक अपडेट हुआ!",
+  "send": "भेजें",
+  "receive": "प्राप्त करें",
+  "add_customer": "ग्राहक जोड़ें",
+  "add_supplier": "आपूर्तिकर्ता जोड़ें",
+  "call": "कॉल करें",
+  "message": "संदेश भेजें",
+  "accessibility": "सुलभता",
+  "language": "भाषा",
+  "increase_text_size": "टेक्स्ट आकार बढ़ाएं",
+  "increase_text_size_A": "टेक्स्ट आकार बढ़ाएं",
+  "currentTextSize": "टेक्स्ट आकार",
+  "use_device_language": "डिवाइस भाषा का उपयोग करें",
+  "auto_dark_mode": "स्वचालित डार्क मोड",
+  "follow_os_setting": "ओएस सेटिंग का पालन करें",
+  "about": "बारे में",
+  "terms_conditions": "नियम और शर्तें",
+  "mode": "स्वचालित डार्क मोड",
+  "off": "बंद",
+  "follow_on_setting": "ओएस सेटिंग का पालन करें",
+  "auto_dark_mode_on": "स्वचालित डार्क मोड चालू",
+  "overrideSettingsTitle": "डिवाइस सेटिंग्स ओवरराइड करें",
+  "overrideSettingsSubtitle": "बिना डिवाइस को प्रभावित किए ऐप में टेक्स्ट आकार समायोजित करें",
+  "textLabel": "ए",
+  "increaseText": "बढ़ाएं",
+  "decreaseText": "घटाएं",
+  "text_size_not_default": "सिस्टम डिफ़ॉल्ट टेक्स्ट आकार चालू है",
+  "please_fill_all_fields": "कृपया सभी फ़ील्ड भरें",
+  "customer_updated_successfully": "ग्राहक सफलतापूर्वक अपडेट हुआ",
+  "customer_added_successfully": "ग्राहक सफलतापूर्वक जोड़ा गया",
+  "something_went_wrong": "कुछ गलत हो गया",
+  "edit_customer": "ग्राहक संपादित करें",
+  "enter_customer_name": "ग्राहक का नाम दर्ज करें",
+  "enter_customer_email": "ग्राहक का ईमेल दर्ज करें",
+  "enter_customer_phone": "ग्राहक का फोन नंबर दर्ज करें",
+  "enter_customer_address": "ग्राहक का पता दर्ज करें",
+  "loading": "लोड हो रहा है...",
+  "update_customer": "ग्राहक अपडेट करें",
+  "transcation_screen": "लेन-देन",
+  "transcation_list": "लेन-देन सूची",
+  "change_transcation_detail": "लेन-देन विवरण बदलें",
+  "change_customer_detail": "ग्राहक विवरण बदलें",
+  "business": "व्यवसाय",
+  "edit_profile": "प्रोफ़ाइल संपादित करें",
+  "enter_amount": "राशि दर्ज करें",
+  "edit": "संपादित करें",
+  "save": "सहेजें",
+  "you_gave": "आपने दिया",
+  "you_got": "आपको मिला",
+  "settement": "समायोजन राशि",
+  "report": "रिपोर्ट",
+  "delete": "हटाएं",
+  "transactions": "लेन-देन",
+  "confirm_delete": "क्या आप वाकई इस लेन-देन को हटाना चाहते हैं?",
+  "no_data": "कोई डेटा उपलब्ध नहीं",
+  "close": "बंद करें"
 }
