--- a/src/locales/kn/translation.json
+++ b/src/locales/kn/translation.json
@@ -1,11 +1,108 @@
 {
-  "greeting": "Namaste,",
-  "get_started": "Let's get started.",
-  "login_description": "Login using your number to continue.",
-  "phone_number_placeholder": "Enter your phone number",
-  "invalid_phone_number": "Please enter a valid 10-digit phone number.",
-  "login_button": "Login",
-  "error": "Error",
-  "error_message": "Failed to save your number. Please try again.",
-  "invalid_phone_number_title": "Invalid Phone Number"
+  "greeting": "ನಮಸ್ತೆ,",
+  "get_started": "ಪ್ರಾರಂಭಿಸೋಣ.",
+  "login_description": "ಮುಂದುವರಿಯಲು ನಿಮ್ಮ ಸಂಖ್ಯೆಯನ್ನು ಬಳಸಿ ಲಾಗಿನ್ ಮಾಡಿ.",
+  "phone_number_placeholder": "ನಿಮ್ಮ ದೂರವಾಣಿ ಸಂಖ್ಯೆಯನ್ನು ನಮೂದಿಸಿ",
+  "invalid_phone_number": "ದಯವಿಟ್ಟು ಸರಿಯಾದ 10 ಅಂಕೆಯ ದೂರವಾಣಿ ಸಂಖ್ಯೆಯನ್ನು ನಮೂದಿಸಿ.",
+  "login_button": "ಲಾಗಿನ್",
+  "error": "ದೋಷ",
+  "error_message": "ನಿಮ್ಮ ಸಂಖ್ಯೆಯನ್ನು ಉಳಿಸಲು ವಿಫಲವಾಗಿದೆ. ದಯವಿಟ್ಟು ಪುನಃ ಪ್ರಯತ್ನಿಸಿ.",
+  "invalid_phone_number_title": "ಅಮಾನ್ಯವಾದ ದೂರವಾಣಿ ಸಂಖ್ಯೆ",
+  "verify_otp": "OTP ಪರಿಶೀಲಿಸಿ",
+  "enter_otp_code": "ನಿಮ್ಮ ಫೋನ್‌ಗೆ ಕಳುಹಿಸಲಾದ 4 ಅಂಕೆಯ ಕೋಡ್ ನಮೂದಿಸಿ.",
+  "resend_otp": "OTP ಪುನಃ ಕಳುಹಿಸಿ",
+  "confirm": "ಖಚಿತಪಡಿಸಿ",
+  "your_business_name": "ನಿಮ್ಮ ವ್ಯವಹಾರದ ಹೆಸರು",
+  "transaction_details": "ವಹಿವಾಟು ವಿವರಗಳು",
+  "party_details": "ಪಕ್ಷದ ವಿವರಗಳು",
+  "manage_transaction_details": "ನಿಮ್ಮ ವಹಿವಾಟಿನ ವಿವರಗಳನ್ನು ಪರಿಣಾಮಕಾರಿಯಾಗಿ ನಿರ್ವಹಿಸಿ.",
+  "manage_party_details": "ಇಲ್ಲಿ ನೀವು ನಿಮ್ಮ ಪಕ್ಷದ ವಿವರಗಳನ್ನು ವೀಕ್ಷಿಸಿ ಮತ್ತು ನಿರ್ವಹಿಸಬಹುದು.",
+  "settings": "ಸೆಟ್ಟಿಂಗ್ಗಳು",
+  "accountInformation": "ಖಾತೆ ಮಾಹಿತಿ",
+  "publicProfile": "ಸಾರ್ವಜನಿಕ ಪ್ರೊಫೈಲ್",
+  "notifications": "ಅಧಿಸೂಚನೆಗಳು",
+  "privacy_policy": "ಗೌಪ್ಯತಾ ನೀತಿ",
+  "notifications_reset": "ಅಧಿಸೂಚನೆಗಳನ್ನು ಮರುಹೊಂದಿಸಿ",
+  "privacyAndDate": "ಗೌಪ್ಯತೆ ಮತ್ತು ದಿನಾಂಕ",
+  "securityAndLogins": "ಭದ್ರತೆ ಮತ್ತು ಲಾಗಿನ್‌ಗಳು",
+  "actions": "ಕ್ರಿಯೆಗಳು",
+  "addAccount": "ಖಾತೆ ಸೇರಿಸಿ",
+  "logOut": "ಲಾಗ್ ಔಟ್",
+  "theme_change": "ಥೀಮ್ ಬದಲಾಯಿಸಿ",
+  "language_change": "ಭಾಷೆ ಬದಲಾಯಿಸಿ",
+  "back": "ಹಿಂದಕ್ಕೆ",
+  "account_information": "ಖಾತೆ ಮಾಹಿತಿ",
+  "reset_notifications_label": "ಅಧಿಸೂಚನೆಗಳನ್ನು ಮರುಹೊಂದಿಸಿ",
+  "terms_and_conditions": "ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳು",
+  "logout_confirmation": "ನೀವು ಖಚಿತವಾಗಿ ಲಾಗ್ ಔಟ್ ಮಾಡಲಿಚ್ಛಿಸುತ್ತೀರಾ?",
+  "logout_message": "ಲಾಗ್ ಔಟ್ ಮಾಡಲು ಖಚಿತಪಡಿಸಿ ಒತ್ತಿರಿ",
+  "light": "ಲೈಟ್ ಮೋಡ್‌ಗೆ ಬದಲಾಯಿಸಿ",
+  "dark": "ಡಾರ್ಕ್ ಮೋಡ್‌ಗೆ ಬದಲಾಯಿಸಿ",
+  "web": "ವೆಬ್",
+  "notification_clean": "ಅಧಿಸೂಚನೆ ತೆರವುಗೊಳಿಸಿ",
+  "cancel": "ರದ್ದುಗೊಳಿಸಿ",
+  "create_account": "ಖಾತೆ ರಚಿಸಿ",
+  "signup_description": "ನಿಮ್ಮ ಇಮೇಲ್ ವಿಳಾಸದೊಂದಿಗೆ ಸೈನ್ ಅಪ್ ಮಾಡಿ.",
+  "email_placeholder": "ನಿಮ್ಮ ಇಮೇಲ್ ವಿಳಾಸವನ್ನು ನಮೂದಿಸಿ",
+  "password_placeholder": "ನಿಮ್ಮ ಗುಪ್ತಪದವನ್ನು ನಮೂದಿಸಿ",
+  "register_button": "ಸೈನ್ ಅಪ್",
+  "forgot_password": "ಗುಪ್ತಪದ ಮರೆತಿರಾ?",
+  "forgot_password_description": "ನಿಮ್ಮ ಗುಪ್ತಪದವನ್ನು ಮರುಹೊಂದಿಸಲು ನಿಮ್ಮ ಇಮೇಲ್ ವಿಳಾಸವನ್ನು ನಮೂದಿಸಿ.",
+  "address": "ವಿಳಾಸ",
+  "phoneNumber": "ಫೋನ್ ಸಂಖ್ಯೆ",
+  "password": "ಗುಪ್ತಪದ",
+  "email": "ಇಮೇಲ್",
+  "name": "ಹೆಸರು",
+  "register_success": "ನೋಂದಣಿ ಯಶಸ್ವಿಯಾಗಿದೆ",
+  "have_account": "ಈಗಾಗಲೇ ಖಾತೆ ಇದೆಯಾ? ಲಾಗಿನ್ ಮಾಡಿ",
+  "registration_failed": "ನೋಂದಣಿ ವಿಫಲವಾಗಿದೆ. ದಯವಿಟ್ಟು ಪುನಃ ಪ್ರಯತ್ನಿಸಿ.",
+  "confirm_password_placeholder": "ನಿಮ್ಮ ಗುಪ್ತಪದವನ್ನು ಖಚಿತಪಡಿಸಿ",
+  "password_required_length": "ಗುಪ್ತಪದ ಕನಿಷ್ಠ 6 ಅಕ್ಷರಗಳು ಇರಬೇಕು",
+  "password_mismatch": "ಗುಪ್ತಪದಗಳು ಹೋಲಿಸಬೇಕು",
+  "login_success": "ಲಾಗಿನ್ ಯಶಸ್ವಿಯಾಗಿದೆ",
+  "customer": "ಗ್ರಾಹಕ",
+  "supplier": "ಸರಬರಾಜುದಾರ",
+  "dark_mode": "ಡಾರ್ಕ್ ಮೋಡ್ ಚಾಲನೆ",
+  "light_mode": "ಲೈಟ್ ಮೋಡ್ ಚಾಲನೆ",
+  "reset_password": "ಗುಪ್ತಪದ ಮರುಹೊಂದಿಸಿ",
+  "reset_description": "ನಿಮ್ಮ ಗುಪ್ತಪದವನ್ನು ಮರುಹೊಂದಿಸಲು ನಿಮ್ಮ ಇಮೇಲ್ ನಮೂದಿಸಿ.",
+  "send_reset_link": "ಮರುಹೊಂದಿಸುವ ಲಿಂಕ್ ಕಳುಹಿಸಿ",
+  "email_required": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ಇಮೇಲ್ ನಮೂದಿಸಿ.",
+  "reset_email_sent": "ಗುಪ್ತಪದ ಮರುಹೊಂದಿಸುವ ಇಮೇಲ್ ಯಶಸ್ವಿಯಾಗಿ ಕಳುಹಿಸಲಾಗಿದೆ!",
+  "reset_failed": "ಗುಪ್ತಪದ ಮರುಹೊಂದಿಸುವ ಇಮೇಲ್ ಕಳುಹಿಸುವುದು ವಿಫಲವಾಗಿದೆ.",
+  "go_back": "ಹಿಂದಕ್ಕೆ ಹೋಗಿ",
+  "forget_password": "ಗುಪ್ತಪದ ಮರೆತಿರಾ?",
+  "change_password": "ಗುಪ್ತಪದ ಬದಲಾಯಿಸಿ",
+  "current_password_placeholder": "ನಿಮ್ಮ ಪ್ರಸ್ತುತ ಗುಪ್ತಪದವನ್ನು ನಮೂದಿಸಿ",
+  "new_password_placeholder": "ನಿಮ್ಮ ಹೊಸ ಗುಪ್ತಪದವನ್ನು ನಮೂದಿಸಿ",
+  "password_updated": "ಗುಪ್ತಪದ ಯಶಸ್ವಿಯಾಗಿ ನವೀಕರಿಸಲಾಗಿದೆ!",
+  "send": "ಕಳುಹಿಸಿ",
+  "receive": "ಸ್ವೀಕರಿಸಿ",
+  "add_customer": "ಗ್ರಾಹಕವನ್ನು ಸೇರಿಸಿ",
+  "add_supplier": "ಸರಬರಾಜುದಾರರನ್ನು ಸೇರಿಸಿ",
+  "call": "ಕರೆ ಮಾಡಿ",
+  "message": "ಸಂದೇಶ",
+  "accessibility": "ಪ್ರವೇಶಯೋಗ್ಯತೆ",
+  "language": "ಭಾಷೆ",
+  "increase_text_size": "ಪಠ್ಯದ ಗಾತ್ರವನ್ನು ಹೆಚ್ಚಿಸಿ",
+  "use_device_language": "ಸಾಧನ ಭಾಷೆಯನ್ನು ಬಳಸಿ",
+  "auto_dark_mode": "ಸ್ವಯಂಚಾಲಿತ ಡಾರ್ಕ್ ಮೋಡ್",
+  "follow_os_setting": "OS ಸೆಟ್ಟಿಂಗ್ ಅನುಸರಿಸಿ",
+  "about": "ಬಗ್ಗೆ",
+  "terms_conditions": "ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳು",
+  "edit_profile": "ಪ್ರೊಫೈಲ್ ಸಂಪಾದಿಸಿ",
+  "edit": "ಸಂಪಾದಿಸಿ",
+  "save": "ಉಳಿಸಿ",
+  "report": "ವರದಿ",
+  "delete": "ಅಳಿಸಿ",
+  "transactions": "ವಹಿವಾಟುಗಳು",
+  "confirm_delete": "ಈ ವಹಿವಾಟನ್ನು ಅಳಿಸಲು ನೀವು ಖಚಿತವಾಗಿ ಬಯಸುವಿರಾ?",
+  "total_settlement": "ಒಟ್ಟು ವಹಿವಾಟು",
+  "no_data": "ಯಾವುದೇ ಡೇಟಾ ಲಭ್ಯವಿಲ್ಲ",
+  "phone_exist": "ದೂರವಾಣಿ ಸಂಖ್ಯೆ ಈಗಾಗಲೇ ಅಸ್ತಿತ್ವದಲ್ಲಿದೆ!",
+  "user_exist": "ಬಳಕೆದಾರ ಈಗಾಗಲೇ ಅಸ್ತಿತ್ವದಲ್ಲಿದ್ದಾರೆ",
+  "no_transactions_found": "ಯಾವುದೇ ವಹಿವಾಟುಗಳು ಕಂಡುಬಂದಿಲ್ಲ",
+  "failed_to_open_sms": "SMS ಅಪ್ಲಿಕೇಶನ್ ತೆರೆಯಲು ವಿಫಲವಾಗಿದೆ.",
+  "data_updated": "ಡೇಟಾ ನವೀಕರಿಸಲಾಗಿದೆ",
+  "close": "ಮುಚ್ಚಿ"
 }
