--- a/src/locales/ml/translation.json
+++ b/src/locales/ml/translation.json
@@ -1,11 +1,115 @@
 {
-  "greeting": "Namaste,",
-  "get_started": "Let's get started.",
-  "login_description": "Login using your number to continue.",
-  "phone_number_placeholder": "Enter your phone number",
-  "invalid_phone_number": "Please enter a valid 10-digit phone number.",
-  "login_button": "Login",
-  "error": "Error",
-  "error_message": "Failed to save your number. Please try again.",
-  "invalid_phone_number_title": "Invalid Phone Number"
+  "greeting": "നമസ്തേ,",
+  "get_started": "ആരംഭിക്കാം.",
+  "login_description": "തുടരാൻ നിങ്ങളുടെ നമ്പർ ഉപയോഗിച്ച് ലോഗിൻ ചെയ്യുക.",
+  "phone_number_placeholder": "നിങ്ങളുടെ ഫോൺ നമ്പർ നൽകുക",
+  "invalid_phone_number": "ദയവായി ഒരു സാധുവായ 10-അക്ക ഫോൺ നമ്പർ നൽകുക.",
+  "login_button": "ലോഗിൻ",
+  "error": "പിശക്",
+  "error_message": "നിങ്ങളുടെ നമ്പർ സംരക്ഷിക്കാൻ കഴിഞ്ഞില്ല. ദയവായി വീണ്ടും ശ്രമിക്കുക.",
+  "invalid_phone_number_title": "അസാധുവായ ഫോൺ നമ്പർ",
+  "verify_otp": "OTP സ്ഥിരീകരിക്കുക",
+  "enter_otp_code": "നിങ്ങളുടെ ഫോണിലേക്ക് അയച്ച 4-അക്ക കോഡ് നൽകുക.",
+  "resend_otp": "OTP വീണ്ടും അയയ്ക്കുക",
+  "confirm": "സ്ഥിരീകരിക്കുക",
+  "your_business_name": "നിങ്ങളുടെ ബിസിനസ് പേര്",
+  "transaction_details": "ഇടപാട് വിവരങ്ങൾ",
+  "party_details": "കക്ഷി വിവരങ്ങൾ",
+  "manage_transaction_details": "നിങ്ങളുടെ ഇടപാട് വിശദാംശങ്ങൾ കാര്യക്ഷമമായി കൈകാര്യം ചെയ്യുക.",
+  "manage_party_details": "ഇവിടെ നിങ്ങൾക്ക് നിങ്ങളുടെ കക്ഷി വിശദാംശങ്ങൾ കാണുകയും കൈകാര്യം ചെയ്യുകയും ചെയ്യാം.",
+  "settings": "സെറ്റിംഗ്സ്",
+  "accountInformation": "അക്കൗണ്ട് വിവരം",
+  "publicProfile": "പബ്ലിക് പ്രൊഫൈൽ",
+  "notifications": "അറിയിപ്പുകൾ",
+  "privacy_policy": "സ്വകാര്യതാ നയം",
+  "notifications_reset": "അറിയിപ്പുകൾ പുനഃസജ്ജമാക്കുക",
+  "privacyAndDate": "സ്വകാര്യതയും തീയതിയും",
+  "securityAndLogins": "സുരക്ഷയും ലോഗിൻസും",
+  "actions": "നടപടികൾ",
+  "addAccount": "അക്കൗണ്ട് ചേർക്കുക",
+  "logOut": "ലോഗൗട്ട്",
+  "theme_change": "തീം മാറ്റം",
+  "language_change": "ഭാഷ മാറ്റം",
+  "back": "തിരികെ",
+  "account_information": "അക്കൗണ്ട് വിവരം",
+  "reset_notifications_label": "അറിയിപ്പുകൾ പുനഃസജ്ജമാക്കുക",
+  "terms_and_conditions": "നിബന്ധനകളും വ്യവസ്ഥകളും",
+  "term_and_condition": "നിബന്ധനയും വ്യവസ്ഥയും",
+  "logout": "ലോഗൗട്ട്",
+  "logout_confirmation": "നിങ്ങൾക്ക് ലോഗൗട്ട് ചെയ്യണമെന്നുറപ്പാണോ?",
+  "logout_message": "ലോഗൗട്ട് ചെയ്യാൻ സ്ഥിരീകരിക്കുക അമർത്തുക",
+  "light": "ലൈറ്റ് മോഡിലേക്ക് മാറ്റുക",
+  "dark": "ഡാർക്ക് മോഡിലേക്ക് മാറ്റുക",
+  "web": "വെബ്",
+  "notification_clean": "അറിയിപ്പുകൾ നീക്കം ചെയ്യുക",
+  "cancel": "റദ്ദാക്കുക",
+  "create_account": "അക്കൗണ്ട് സൃഷ്ടിക്കുക",
+  "signup_description": "നിങ്ങളുടെ ഇമെയിൽ വിലാസം ഉപയോഗിച്ച് സൈൻ അപ്പ് ചെയ്യുക.",
+  "email_placeholder": "നിങ്ങളുടെ ഇമെയിൽ വിലാസം നൽകുക",
+  "password_placeholder": "നിങ്ങളുടെ പാസ്വേഡ് നൽകുക",
+  "register_button": "സൈൻ അപ്പ്",
+  "forgot_password": "പാസ്വേഡ് മറന്നോ?",
+  "forgot_password_description": "നിങ്ങളുടെ പാസ്വേഡ് പുനഃസജ്ജമാക്കാൻ നിങ്ങളുടെ ഇമെയിൽ വിലാസം നൽകുക.",
+  "address": "വിലാസം",
+  "phoneNumber": "ഫോൺ നമ്പർ",
+  "password": "പാസ്വേഡ്",
+  "email": "ഇമെയിൽ",
+  "name": "പേര്",
+  "register_success": "നിബന്ധനകൾ വിജയകരമായി രജിസ്റ്റർ ചെയ്തു",
+  "have_account": "നിങ്ങൾക്കൊരു അക്കൗണ്ട് ഉണ്ടോ? ലോഗിൻ ചെയ്യുക",
+  "registration_failed": "രജിസ്ട്രേഷൻ പരാജയപ്പെട്ടു. ദയവായി വീണ്ടും ശ്രമിക്കുക.",
+  "register_failed": "രജിസ്ട്രേഷൻ പരാജയപ്പെട്ടു. ദയവായി വീണ്ടും ശ്രമിക്കുക.",
+  "confirm_password_placeholder": "നിങ്ങളുടെ പാസ്വേഡ് സ്ഥിരീകരിക്കുക",
+  "password_required_length": "പാസ്വേഡ് കുറഞ്ഞത് 6 അക്ഷരങ്ങൾ ഉണ്ടായിരിക്കണം",
+  "password_mismatch": "പാസ്വേഡുകൾ പൊരുത്തപ്പെടണം",
+  "login_success": "ലോഗിൻ വിജയകരമായി",
+  "customer": "ഉപഭോക്താവ്",
+  "supplier": "വിതരണക്കാരൻ",
+  "dark_mode": "ഡാർക്ക് മോഡ് ഓണാക്കുക",
+  "light_mode": "ലൈറ്റ് മോഡ് ഓണാക്കുക",
+  "reset_password": "പാസ്വേഡ് പുനഃസജ്ജമാക്കുക",
+  "reset_description": "നിങ്ങളുടെ പാസ്വേഡ് പുനഃസജ്ജമാക്കാൻ നിങ്ങളുടെ ഇമെയിൽ നൽകുക.",
+  "send_reset_link": "പുനഃസജ്ജമാക്കൽ ലിങ്ക് അയയ്ക്കുക",
+  "email_required": "ദയവായി നിങ്ങളുടെ ഇമെയിൽ നൽകുക.",
+  "reset_email_sent": "പാസ്വേഡ് പുനഃസജ്ജമാക്കൽ ഇമെയിൽ വിജയകരമായി അയച്ചു!",
+  "reset_failed": "പാസ്വേഡ് പുനഃസജ്ജമാക്കൽ ഇമെയിൽ അയയ്ക്കാൻ പരാജയപ്പെട്ടു.",
+  "go_back": "തിരികെ പോകുക",
+  "forget_password": "പാസ്വേഡ് മറന്നോ?",
+  "change_password": "പാസ്വേഡ് മാറ്റുക",
+  "current_password_placeholder": "നിങ്ങളുടെ നിലവിലെ പാസ്വേഡ് നൽകുക",
+  "new_password_placeholder": "നിങ്ങളുടെ പുതിയ പാസ്വേഡ് നൽകുക",
+  "password_updated": "പാസ്വേഡ് വിജയകരമായി അപ്ഡേറ്റ് ചെയ്തു!",
+  "send": "അയയ്ക്കുക",
+  "receive": "സ്വീകരിക്കുക",
+  "add_customer": "ഉപഭോക്താവിനെ ചേർക്കുക",
+  "add_supplier": "വിതരണക്കാരനെ ചേർക്കുക",
+  "call": "വിളിക്കുക",
+  "message": "സന്ദേശം",
+  "accessibility": "പ്രവേശന സൗകര്യം",
+  "language": "ഭാഷ",
+  "increase_text_size": "അക്ഷര വലുപ്പം കൂട്ടുക",
+  "use_device_language": "ഡിവൈസ് ഭാഷ ഉപയോഗിക്കുക",
+  "auto_dark_mode": "ഓട്ടോ ഡാർക്ക് മോഡ്",
+  "follow_os_setting": "ഓ എസ് സജ്ജീകരണം പിന്തുടരുക",
+  "about": "കുറിച്ച്",
+  "terms_conditions": "നിബന്ധനകളും വ്യവസ്ഥകളും",
+  "mode": "ഓട്ടോ ഡാർക്ക് മോഡ്",
+  "off": "ഓഫ്",
+  "follow_on_setting": "ഓ എസ് സജ്ജീകരണം പിന്തുടരുക",
+  "overrideSettingsTitle": "ഡിവൈസ് സജ്ജീകരണങ്ങൾ ഓവർറൈഡ് ചെയ്യുക",
+  "overrideSettingsSubtitle": "ആപ്പ് ഉള്ളിൽ മാത്രം അക്ഷര വലുപ്പം ക്രമീകരിക്കുക",
+  "increaseText": "കൂടിക്കുക",
+  "decreaseText": "കുറയ്ക്കുക",
+  "customer_updated_successfully": "ഉപഭോക്താവ് വിജയകരമായി അപ്ഡേറ്റ് ചെയ്തു",
+  "customer_added_successfully": "ഉപഭോക്താവ് വിജയകരമായി ചേർത്തു",
+  "no_transactions_found": "ഇടപാടുകൾ കണ്ടില്ല",
+  "delete": "ഡിലീറ്റ്",
+  "total_settlement": "മൊത്തം കണക്കുകൂട്ടൽ",
+  "payment_received": "പേയ്‌മെന്റ് ലഭിച്ചു",
+  "payment_sent": "പേയ്‌മെന്റ് അയച്ചു",
+  "transaction_history": "ഇടപാട് ചരിത്രം",
+  "add_transaction": "ഇടപാട് ചേർക്കുക",
+  "enter_business_name": "ബിസിനസ് പേര് നൽകുക",
+  "data_updated": "ഡാറ്റ അപ്ഡേറ്റ് ചെയ്തു",
+  "close": "അടയ്ക്കുക"
 }
