--- a/src/locales/mr/translation.json
+++ b/src/locales/mr/translation.json
@@ -1,11 +1,131 @@
 {
-  "greeting": "Namaste,",
-  "get_started": "Let's get started.",
-  "login_description": "Login using your number to continue.",
-  "phone_number_placeholder": "Enter your phone number",
-  "invalid_phone_number": "Please enter a valid 10-digit phone number.",
-  "login_button": "Login",
-  "error": "Error",
-  "error_message": "Failed to save your number. Please try again.",
-  "invalid_phone_number_title": "Invalid Phone Number"
+  "greeting": "नमस्ते,",
+  "get_started": "चला सुरुवात करूया.",
+  "login_description": "सुरू ठेवण्यासाठी तुमचा नंबर वापरून लॉगिन करा.",
+  "phone_number_placeholder": "तुमचा फोन नंबर टाका",
+  "invalid_phone_number": "कृपया वैध 10-अंकी फोन नंबर टाका.",
+  "login_button": "लॉगिन",
+  "error": "त्रुटी",
+  "error_message": "तुमचा नंबर सेव्ह करण्यात अयशस्वी. कृपया पुन्हा प्रयत्न करा.",
+  "invalid_phone_number_title": "अवैध फोन नंबर",
+  "verify_otp": "OTP सत्यापित करा",
+  "enter_otp_code": "तुमच्या फोनवर पाठवलेला 4-अंकी कोड टाका.",
+  "resend_otp": "OTP पुन्हा पाठवा",
+  "confirm": "निश्चीत करा",
+  "your_business_name": "तुमच्या व्यवसायाचे नाव",
+  "transaction_details": "व्यवहार तपशील",
+  "party_details": "पार्टी तपशील",
+  "manage_transaction_details": "तुमचे व्यवहार तपशील प्रभावीपणे व्यवस्थापित करा.",
+  "manage_party_details": "येथे तुम्ही पार्टी तपशील पाहू आणि व्यवस्थापित करू शकता.",
+  "settings": "सेटिंग्स",
+  "accountInformation": "खाते माहिती",
+  "publicProfile": "सार्वजनिक प्रोफाइल",
+  "notifications": "सूचना",
+  "privacy_policy": "गोपनीयता धोरण",
+  "notifications_reset": "सूचना रीसेट करा",
+  "privacyAndDate": "गोपनीयता आणि तारीख",
+  "securityAndLogins": "सुरक्षा आणि लॉगिन",
+  "actions": "क्रिया",
+  "addAccount": "नवीन खाते जोडा",
+  "logOut": "लॉग आउट",
+  "theme_change": "थीम बदला",
+  "language_change": "भाषा बदला",
+  "back": "मागे",
+  "account_information": "खाते माहिती",
+  "reset_notifications_label": "सूचना रीसेट करा",
+  "terms_and_conditions": "अटी आणि शर्ती",
+  "term_and_condition": "अट आणि शर्त",
+  "logout": "लॉगआउट",
+  "logout_confirmation": "तुम्हाला खात्री आहे का की तुम्ही लॉगआउट करू इच्छिता?",
+  "logout_message": "लॉगआउट करण्यासाठी पुष्टी द्या",
+  "light": "प्रकाशमय मोड",
+  "dark": "गडद मोड",
+  "web": "वेब",
+  "notification_clean": "सूचना स्वच्छ करा",
+  "cancel": "रद्द करा",
+  "create_account": "खाते तयार करा",
+  "signup_description": "तुमच्या ईमेल पत्त्याने साइन अप करा.",
+  "email_placeholder": "तुमचा ईमेल पत्ता टाका",
+  "password_placeholder": "तुमचा पासवर्ड टाका",
+  "register_button": "साइन अप",
+  "forgot_password": "पासवर्ड विसरलात?",
+  "forgot_password_description": "तुमचा पासवर्ड रीसेट करण्यासाठी तुमचा ईमेल टाका.",
+  "address": "पत्ता",
+  "phoneNumber": "फोन नंबर",
+  "password": "पासवर्ड",
+  "email": "ईमेल",
+  "name": "नाव",
+  "register_success": "नोंदणी यशस्वी",
+  "have_account": "आधीच खाते आहे? लॉगिन करा",
+  "registration_failed": "नोंदणी अयशस्वी. कृपया पुन्हा प्रयत्न करा.",
+  "confirm_password_placeholder": "तुमचा पासवर्ड पुन्हा टाका",
+  "password_required_length": "पासवर्ड किमान 6 अक्षरे असावा",
+  "password_mismatch": "पासवर्ड जुळला पाहिजे",
+  "login_success": "लॉगिन यशस्वी",
+  "customer": "ग्राहक",
+  "supplier": "पुरवठादार",
+  "dark_mode": "गडद मोड सुरू करा",
+  "light_mode": "प्रकाशमय मोड सुरू करा",
+  "reset_password": "पासवर्ड रीसेट करा",
+  "reset_description": "तुमचा पासवर्ड रीसेट करण्यासाठी तुमचा ईमेल टाका.",
+  "send_reset_link": "रीसेट लिंक पाठवा",
+  "email_required": "कृपया तुमचा ईमेल टाका.",
+  "reset_email_sent": "पासवर्ड रीसेट ईमेल यशस्वीरित्या पाठवला!",
+  "reset_failed": "पासवर्ड रीसेट ईमेल पाठवण्यास अपयश.",
+  "go_back": "मागे जा",
+  "forget_password": "पासवर्ड विसरलात?",
+  "change_password": "पासवर्ड बदला",
+  "current_password_placeholder": "तुमचा सध्याचा पासवर्ड टाका",
+  "new_password_placeholder": "तुमचा नवीन पासवर्ड टाका",
+  "password_updated": "पासवर्ड यशस्वीरित्या अपडेट केला!",
+  "send": "पाठवा",
+  "receive": "स्वीकारा",
+  "add_customer": "ग्राहक जोडा",
+  "add_supplier": "पुरवठादार जोडा",
+  "call": "कॉल करा",
+  "message": "संदेश",
+  "accessibility": "प्रवेशयोग्यता",
+  "language": "भाषा",
+  "increase_text_size": "मजकूर आकार वाढवा",
+  "use_device_language": "डिव्हाइसची भाषा वापरा",
+  "auto_dark_mode": "स्वयंचलित गडद मोड",
+  "follow_os_setting": "OS सेटिंगनुसार अनुसरण करा",
+  "about": "विषयी",
+  "terms_conditions": "अटी आणि शर्ती",
+  "mode": "स्वयंचलित गडद मोड",
+  "off": "बंद",
+  "follow_on_setting": "OS सेटिंगनुसार अनुसरण करा",
+  "auto_dark_mode_on": "स्वयंचलित गडद मोड सुरू",
+  "overrideSettingsTitle": "डिव्हाइस सेटिंग अधिलिखित करा",
+  "overrideSettingsSubtitle": "उर्वरित डिव्हाइसवर परिणाम न करता अॅपमधील मजकूराचा आकार समायोजित करा",
+  "textLabel": "A",
+  "increaseText": "वाढवा",
+  "decreaseText": "कमी करा",
+  "text_size_not_default": "प्रणालीचा डीफॉल्ट मजकूर आकार चालू आहे",
+  "please_fill_all_fields": "कृपया सर्व फील्ड भरा",
+  "customer_updated_successfully": "ग्राहक यशस्वीरित्या अपडेट केला",
+  "customer_added_successfully": "ग्राहक यशस्वीरित्या जोडला",
+  "something_went_wrong": "काहीतरी चुकले",
+  "edit_customer": "ग्राहक संपादित करा",
+  "enter_customer_name": "ग्राहकाचे नाव टाका",
+  "enter_customer_email": "ग्राहकाचा ईमेल टाका",
+  "enter_customer_phone": "ग्राहकाचा फोन नंबर टाका",
+  "enter_customer_address": "ग्राहकाचा पत्ता टाका",
+  "loading": "लोड करत आहे...",
+  "update_customer": "ग्राहक अपडेट करा",
+  "transcation_screen": "व्यवहार",
+  "transcation_list": "व्यवहार यादी",
+  "change_transcation_detail": "व्यवहार तपशील बदला",
+  "change_customer_detail": "ग्राहक तपशील बदला",
+  "business": "व्यवसाय",
+  "edit_profile": "प्रोफाइल संपादित करा",
+  "enter_amount": "रक्कम टाका",
+  "edit": "संपादित करा",
+  "save": "जतन करा",
+  "you_gave": "तुम्ही दिले",
+  "you_got": "तुम्ही घेतले",
+  "settement": "समाधान रक्कम",
+  "report": "अहवाल",
+  "delete": "हटवा",
+  "confirm_delete": "तुम्हाला खात्री आहे का की तुम्ही हा व्यवहार हटवू इच्छिता?"
 }
