--- a/src/locales/ta/translation.json
+++ b/src/locales/ta/translation.json
@@ -1,11 +1,110 @@
 {
-  "greeting": "Namaste,",
-  "get_started": "Let's get started.",
-  "login_description": "Login using your number to continue.",
-  "phone_number_placeholder": "Enter your phone number",
-  "invalid_phone_number": "Please enter a valid 10-digit phone number.",
-  "login_button": "Login",
-  "error": "Error",
-  "error_message": "Failed to save your number. Please try again.",
-  "invalid_phone_number_title": "Invalid Phone Number"
+  "greeting": "நமஸ்தே,",
+  "get_started": "ஆரம்பிக்கலாம்.",
+  "login_description": "தொடர உங்கள் எண்ணைப் பயன்படுத்தி உள்நுழையுங்கள்.",
+  "phone_number_placeholder": "உங்கள் தொலைபேசி எண்ணை உள்ளிடவும்",
+  "invalid_phone_number": "தயவுசெய்து சரியான 10 இலக்க தொலைபேசி எண்ணை உள்ளிடவும்.",
+  "login_button": "உள்நுழை",
+  "error": "பிழை",
+  "error_message": "உங்கள் எண்ணை சேமிக்க முடியவில்லை. மீண்டும் முயற்சிக்கவும்.",
+  "invalid_phone_number_title": "தவறான தொலைபேசி எண்",
+  "verify_otp": "OTP சரிபார்க்கவும்",
+  "enter_otp_code": "உங்கள் தொலைபேசிக்கு அனுப்பிய 4 இலக்க குறியீட்டை உள்ளிடவும்.",
+  "resend_otp": "OTP மீண்டும் அனுப்பவும்",
+  "confirm": "உறுதிப்படுத்தவும்",
+  "your_business_name": "உங்கள் வணிகத்தின் பெயர்",
+  "transaction_details": "பரிவர்த்தனை விவரங்கள்",
+  "party_details": "கடன் வழங்குநர்/கடன் வாங்குநர் விவரங்கள்",
+  "manage_transaction_details": "உங்கள் பரிவர்த்தனை விவரங்களை திறம்பட நிர்வகிக்கவும்.",
+  "manage_party_details": "இங்கே உங்கள் கடன் வழங்குநர்/கடன் வாங்குநர் விவரங்களை பார்வையிடவும் மற்றும் நிர்வகிக்கவும்.",
+  "settings": "அமைப்புகள்",
+  "accountInformation": "கணக்கு தகவல்",
+  "publicProfile": "பொது சுயவிவரம்",
+  "notifications": "அறிவிப்புகள்",
+  "privacy_policy": "தனியுரிமை கொள்கை",
+  "notifications_reset": "அறிவிப்புகள் மீட்டமை",
+  "privacyAndDate": "தனியுரிமை மற்றும் தேதி",
+  "securityAndLogins": "பாதுகாப்பு மற்றும் உள்நுழைவு",
+  "actions": "நடவடிக்கைகள்",
+  "addAccount": "கணக்கை சேர்க்கவும்",
+  "logOut": "வெளியேறு",
+  "theme_change": "தீம் மாற்றம்",
+  "language_change": "மொழி மாற்றம்",
+  "back": "மீண்டும்",
+  "account_information": "கணக்கு தகவல்",
+  "reset_notifications_label": "அறிவிப்புகளை மீட்டமைக்கவும்",
+  "terms_and_conditions": "விதிமுறைகள் மற்றும் நிபந்தனைகள்",
+  "logout_confirmation": "நீங்கள் நிச்சயமாக வெளியேற விரும்புகிறீர்களா?",
+  "logout_message": "வெளியேற உறுதிப்படுத்தவும்",
+  "light": "ஒளி பயன்முறை மாற்றவும்",
+  "dark": "கரும்பயன்முறை மாற்றவும்",
+  "web": "வலை",
+  "notification_clean": "அறிவிப்பு அழிக்கவும்",
+  "cancel": "ரத்து செய்",
+  "create_account": "கணக்கை உருவாக்கவும்",
+  "signup_description": "உங்கள் மின்னஞ்சல் முகவரியுடன் பதிவுசெய்யவும்.",
+  "email_placeholder": "உங்கள் மின்னஞ்சல் முகவரியை உள்ளிடவும்",
+  "password_placeholder": "உங்கள் கடவுச்சொல்லை உள்ளிடவும்",
+  "register_button": "பதிவு செய்யவும்",
+  "forgot_password": "கடவுச்சொல் மறந்துவிட்டதா?",
+  "forgot_password_description": "உங்கள் கடவுச்சொல்லை மீட்டமை மின்னஞ்சலை அனுப்ப மின்னஞ்சலை உள்ளிடவும்.",
+  "address": "முகவரி",
+  "phoneNumber": "தொலைபேசி எண்",
+  "password": "கடவுச்சொல்",
+  "email": "மின்னஞ்சல்",
+  "name": "பெயர்",
+  "register_success": "பதிவு வெற்றிகரமாக முடிந்தது",
+  "have_account": "ஏற்கனவே கணக்கு உள்ளதா? உள்நுழையவும்",
+  "registration_failed": "பதிவு தோல்வியடைந்தது. மீண்டும் முயற்சிக்கவும்.",
+  "confirm_password_placeholder": "உறுதிப்படுத்தும் கடவுச்சொல்லை உள்ளிடவும்",
+  "password_required_length": "கடவுச்சொல் குறைந்தது 6 எழுத்துகளாக இருக்க வேண்டும்",
+  "password_mismatch": "கடவுச்சொல் பொருந்தவில்லை",
+  "login_success": "உள்நுழைவு வெற்றியடைந்தது",
+  "customer": "வாடிக்கையாளர்",
+  "supplier": "விநியோகஸ்தர்",
+  "dark_mode": "கரும்பயன்முறையை இயக்கவும்",
+  "light_mode": "ஒளி பயன்முறையை இயக்கவும்",
+  "reset_password": "கடவுச்சொல் மீட்டமைக்கவும்",
+  "send_reset_link": "மீட்டமை இணைப்பை அனுப்பவும்",
+  "email_required": "தயவுசெய்து உங்கள் மின்னஞ்சலை உள்ளிடவும்.",
+  "reset_email_sent": "கடவுச்சொல் மீட்டமை மின்னஞ்சல் வெற்றிகரமாக அனுப்பப்பட்டது!",
+  "reset_failed": "கடவுச்சொல் மீட்டமை மின்னஞ்சல் அனுப்ப முடியவில்லை.",
+  "go_back": "திரும்பிச் செல்லவும்",
+  "forget_password": "கடவுச்சொல் மறந்துவிட்டதா?",
+  "change_password": "கடவுச்சொல்லை மாற்றவும்",
+  "send": "அனுப்பு",
+  "receive": "பெறு",
+  "add_customer": "வாடிக்கையாளரை சேர்க்கவும்",
+  "add_supplier": "விநியோகஸ்தரை சேர்க்கவும்",
+  "call": "அழை",
+  "message": "செய்தி",
+  "accessibility": "அணுகல்",
+  "language": "மொழி",
+  "increase_text_size": "உரையின் அளவை அதிகரிக்கவும்",
+  "currentTextSize": "தற்போதைய உரை அளவு",
+  "use_device_language": "சாதன மொழியை பயன்படுத்தவும்",
+  "auto_dark_mode": "தானாக கரும்பயன்முறை",
+  "about": "பற்றி",
+  "mode": "தானாக கரும்பயன்முறை",
+  "off": "முடக்கு",
+  "overrideSettingsTitle": "சாதன அமைப்புகளை மேலெழுதவும்",
+  "overrideSettingsSubtitle": "மொத்த சாதனத்தை பாதிக்காமல் பயன்பாட்டில் உரை அளவை சரிசெய்யவும்",
+  "increaseText": "அதிகரிக்கவும்",
+  "decreaseText": "குறைக்கவும்",
+  "please_fill_all_fields": "அனைத்து புலங்களையும் நிரப்பவும்",
+  "customer_updated_successfully": "வாடிக்கையாளர் வெற்றிகரமாக புதுப்பிக்கப்பட்டார்",
+  "customer_added_successfully": "வாடிக்கையாளர் வெற்றிகரமாக சேர்க்கப்பட்டார்",
+  "something_went_wrong": "ஏதோ தவறாக நடந்துவிட்டது",
+  "edit_customer": "வாடிக்கையாளரை திருத்தவும்",
+  "loading": "ஏற்றுகிறது...",
+  "edit_profile": "சுயவிவரத்தை திருத்து",
+  "save": "சேமிக்கவும்",
+  "delete": "நீக்கு",
+  "transactions": "பரிவர்த்தனைகள்",
+  "confirm_delete": "நீங்கள் இந்த பரிவர்த்தனையை நிச்சயமாக நீக்க விரும்புகிறீர்களா?",
+  "total_settlement": "மொத்த சமன்படுத்தல்",
+  "no_data": "தகவல் இல்லை",
+  "failed_to_open_sms": "SMS பயன்பாட்டை திறக்க முடியவில்லை.",
+  "show_address": "முகவரியை காட்டு",
+  "close": "மூடு"
 }
