--- a/src/locales/te/translation.json
+++ b/src/locales/te/translation.json
@@ -1,11 +1,105 @@
 {
-  "greeting": "Namaste,",
-  "get_started": "Let's get started.",
-  "login_description": "Login using your number to continue.",
-  "phone_number_placeholder": "Enter your phone number",
-  "invalid_phone_number": "Please enter a valid 10-digit phone number.",
-  "login_button": "Login",
-  "error": "Error",
-  "error_message": "Failed to save your number. Please try again.",
-  "invalid_phone_number_title": "Invalid Phone Number"
+  "greeting": "నమస్తే,",
+  "get_started": "ప్రారంభిద్దాం.",
+  "login_description": "కొనసాగించేందుకు మీ నంబర్ ఉపయోగించి లాగిన్ అవ్వండి.",
+  "phone_number_placeholder": "మీ ఫోన్ నంబర్ నమోదు చేయండి",
+  "invalid_phone_number": "దయచేసి చెల్లుబాటు అయ్యే 10-అంకెల ఫోన్ నంబర్‌ను నమోదు చేయండి.",
+  "login_button": "లాగిన్",
+  "error": "లోపం",
+  "error_message": "మీ నంబర్ సేవ్ చేయడంలో విఫలమైంది. మళ్లీ ప్రయత్నించండి.",
+  "invalid_phone_number_title": "చెల్లని ఫోన్ నంబర్",
+  "verify_otp": "OTP నిర్ధారించండి",
+  "enter_otp_code": "మీ ఫోన్‌కు పంపిన 4-అంకెల కోడ్‌ని నమోదు చేయండి.",
+  "resend_otp": "OTP మళ్లీ పంపండి",
+  "confirm": "నిర్ధారించండి",
+  "your_business_name": "మీ వ్యాపారం పేరు",
+  "transaction_details": "లావాదేవీ వివరాలు",
+  "party_details": "పార్టీ వివరాలు",
+  "manage_transaction_details": "మీ లావాదేవీ వివరాలను సమర్థవంతంగా నిర్వహించండి.",
+  "manage_party_details": "ఇక్కడ మీరు పార్టీ వివరాలను చూడవచ్చు మరియు నిర్వహించవచ్చు.",
+  "settings": "సెట్టింగ్‌లు",
+  "accountInformation": "ఖాతా సమాచారం",
+  "publicProfile": "పబ్లిక్ ప్రొఫైల్",
+  "notifications": "నోటిఫికేషన్‌లు",
+  "privacy_policy": "గోప్యతా విధానం",
+  "notifications_reset": "నోటిఫికేషన్‌లను రీసెట్ చేయండి",
+  "privacyAndDate": "గోప్యత మరియు తేదీ",
+  "securityAndLogins": "భద్రత మరియు లాగిన్‌లు",
+  "actions": "చర్యలు",
+  "addAccount": "ఖాతా జోడించండి",
+  "logOut": "లాగ్ అవుట్",
+  "theme_change": "థీమ్ మార్చండి",
+  "language_change": "భాష మార్చండి",
+  "back": "వెనుకకు",
+  "account_information": "ఖాతా సమాచారం",
+  "reset_notifications_label": "నోటిఫికేషన్‌లను రీసెట్ చేయండి",
+  "terms_and_conditions": "నియమాలు మరియు షరతులు",
+  "term_and_condition": "నియమం మరియు షరతు",
+  "logout": "లాగ్ అవుట్",
+  "logout_confirmation": "మీరు ఖచ్చితంగా లాగ్ అవుట్ కావాలనుకుంటున్నారా?",
+  "logout_message": "లాగ్ అవుట్ చేయడానికి నిర్ధారించండి నొక్కండి",
+  "light": "లైట్ మోడ్‌కు మార్చండి",
+  "dark": "డార్క్ మోడ్‌కు మార్చండి",
+  "web": "వెబ్",
+  "notification_clean": "నోటిఫికేషన్ క్లీన్",
+  "cancel": "రద్దు",
+  "create_account": "ఖాతా సృష్టించండి",
+  "signup_description": "మీ ఇమెయిల్ చిరునామాతో సైన్ అప్ చేయండి.",
+  "email_placeholder": "మీ ఇమెయిల్ చిరునామాను నమోదు చేయండి",
+  "password_placeholder": "మీ పాస్‌వర్డ్‌ను నమోదు చేయండి",
+  "register_button": "సైన్ అప్",
+  "forgot_password": "పాస్‌వర్డ్ మర్చిపోయారా?",
+  "forgot_password_description": "మీ పాస్‌వర్డ్ రీసెట్ చేయడానికి మీ ఇమెయిల్ చిరునామాను నమోదు చేయండి.",
+  "address": "చిరునామా",
+  "phoneNumber": "ఫోన్ నం.",
+  "password": "పాస్‌వర్డ్",
+  "email": "ఇమెయిల్ నమోదు చేయండి",
+  "name": "పేరు",
+  "register_success": "నమోదు విజయవంతం",
+  "have_account": "ఖాతా కలిగివున్నారా? లాగిన్ అవ్వండి",
+  "registration_failed": "నమోదు విఫలమైంది. మళ్లీ ప్రయత్నించండి.",
+  "register_failed": "నమోదు విఫలమైంది. మళ్లీ ప్రయత్నించండి.",
+  "confirm_password_placeholder": "మీ పాస్‌వర్డ్‌ని నిర్ధారించండి",
+  "password_required_length": "పాస్‌వర్డ్ కనీసం 6 అక్షరాల పొడవుండాలి",
+  "password_mismatch": "పాస్‌వర్డ్ సరిపోలాలి",
+  "login_success": "లాగిన్ విజయవంతం",
+  "customer": "కస్టమర్",
+  "supplier": "సప్లయర్",
+  "dark_mode": "డార్క్ మోడ్ ఆన్ చేయండి",
+  "light_mode": "లైట్ మోడ్ ఆన్ చేయండి",
+  "reset_password": "పాస్‌వర్డ్ రీసెట్ చేయండి",
+  "reset_description": "మీ పాస్‌వర్డ్‌ను రీసెట్ చేయడానికి మీ ఇమెయిల్ నమోదు చేయండి.",
+  "send_reset_link": "రీసెట్ లింక్ పంపండి",
+  "email_required": "దయచేసి మీ ఇమెయిల్‌ను నమోదు చేయండి.",
+  "reset_email_sent": "పాస్‌వర్డ్ రీసెట్ ఇమెయిల్ విజయవంతంగా పంపబడింది!",
+  "reset_failed": "పాస్‌వర్డ్ రీసెట్ ఇమెయిల్ పంపడంలో విఫలమైంది.",
+  "go_back": "వెనుకకు వెళ్లండి",
+  "forget_password": "పాస్‌వర్డ్ మర్చిపోయారా?",
+  "change_password": "పాస్‌వర్డ్ మార్చండి",
+  "current_password_placeholder": "మీ ప్రస్తుత పాస్‌వర్డ్‌ను నమోదు చేయండి",
+  "new_password_placeholder": "మీ కొత్త పాస్‌వర్డ్‌ను నమోదు చేయండి",
+  "password_updated": "పాస్‌వర్డ్ విజయవంతంగా నవీకరించబడింది!",
+  "send": "పంపండి",
+  "receive": "స్వీకరించండి",
+  "add_customer": "కస్టమర్ జోడించండి",
+  "add_supplier": "సప్లయర్ జోడించండి",
+  "call": "కాల్",
+  "message": "మెసేజ్",
+  "accessibility": "అందుబాటు",
+  "language": "భాష",
+  "increase_text_size": "పాఠ్య పరిమాణాన్ని పెంచండి",
+  "currentTextSize": "పాఠ్య పరిమాణం",
+  "use_device_language": "పరికర భాషను ఉపయోగించండి",
+  "auto_dark_mode": "ఆటో డార్క్ మోడ్",
+  "follow_os_setting": "OS సెట్టింగ్‌ను అనుసరించండి",
+  "about": "గురించి",
+  "terms_conditions": "నిబంధనలు మరియు షరతులు",
+  "mode": "ఆటో డార్క్ మోడ్",
+  "off": "ఆఫ్",
+  "total_settlement": "మొత్తం సెటిల్మెంట్",
+  "no_data": "డేటా లేదు",
+  "failed_to_open_sms": "SMS యాప్ తెరవడంలో విఫలమైంది.",
+  "enter_business_name": "వ్యాపారం పేరు నమోదు చేయండి",
+  "data_updated": "డేటా నవీకరించబడింది",
+  "close": "మూసివేయి"
 }
